--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,71 @@
 asn1crypto==0.24.0
+attrs==17.4.0
+Automat==0.6.0
 bcrypt==3.1.7
-capstone==4.0.1
-certifi==2020.4.5.1
-cffi==1.14.0
+blinker==1.4
+certifi==2018.1.18
+cffi==1.13.2
 chardet==3.0.4
-cpplint==1.4.4
-cryptography==2.9.2
-enum34==1.1.10
-idna==2.9
-intervaltree==3.0.2
-ipaddress==1.0.23
+Click==7.0
+cloud-init==18.5
+colorama==0.3.7
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.1.4
+distro-info===0.18ubuntu0.18.04.1
+Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
+gunicorn==20.0.4
+httplib2==0.9.2
+hyperlink==17.3.1
+idna==2.6
+incremental==16.10.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsonpatch==1.16
+jsonpointer==1.10
+jsonschema==2.6.0
 keyring==10.6.0
 keyrings.alt==3.0
-Mako==1.1.2
+language-selector==0.1
 MarkupSafe==1.1.1
-packaging==20.3
-paramiko==2.7.1
-psutil==5.7.0
-pwntools==4.1.0
-pycparser==2.20
+mysqlclient==1.4.6
+netifaces==0.10.4
+oauthlib==2.0.6
+PAM==0.4.2
+pdf2image==1.16.0
+Pillow==8.3.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.19
 pycrypto==2.6.1
-pyelftools==0.26
-Pygments==2.5.2
+Pygments==2.2.0
 pygobject==3.26.1
-PyNaCl==1.3.0
-pyparsing==2.4.7
+PyJWT==1.5.3
+pyOpenSSL==17.5.0
 pyserial==3.4
-PySocks==1.7.1
-python-dateutil==2.8.1
+pytesseract==0.3.8
+python-apt==1.6.4
+python-debian==0.1.32
 pyxdg==0.25
-requests==2.23.0
-ROPGadget==6.3
+PyYAML==3.12
+requests==2.18.4
+requests-unixsocket==0.1.5
 SecretStorage==2.3.1
-six==1.14.0
-sortedcontainers==2.1.0
-unicorn==1.0.2rc3
-urllib3==1.25.9
+service-identity==16.0.0
+six==1.13.0
+SQLAlchemy==1.3.11
+ssh-import-id==5.7
+systemd-python==234
+Twisted==17.9.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+virtualenv==16.7.8
+Werkzeug==0.16.0
+WTForms==2.2.1
+zope.interface==4.3.2
